--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,6 +37,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   taxi_rides_ny:
-    # Applies to all files under models/example/
-    example:
-      +materialized: table
+    core:
+      materialized: table
+    staging:
+      materialized: view
+    
